3d texture paint produces odd artifacts/bad aliasing in 2d view #35426

Closed
opened 2013-05-19 00:36:30 +02:00 by N Greene · 6 comments

%%%--- Operating System, Graphics card ---
win 7 64bit , gtx560ti
- Blender version with error, and version that worked ---
version with error r56902

- Short description of error ---

painting a stroke,using texture mask,in 3d view,produces odd result in 3d view,as compared to the 2d view.Also the aliasing seems quite bad.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

we have a square texture brush (made by forum member xrg)

open attached blend file,and draw a stroke. draw one in the 3d view and another in the 2d.

2D has correct behavior,3d does not.

%%%

%%%--- Operating System, Graphics card --- win 7 64bit , gtx560ti - Blender version with error, and version that worked --- version with error r56902 - Short description of error --- painting a stroke,using texture mask,in 3d view,produces odd result in 3d view,as compared to the 2d view.Also the aliasing seems quite bad. - Steps for others to reproduce the error (preferably based on attached .blend file) --- we have a square texture brush (made by forum member xrg) open attached blend file,and draw a stroke. draw one in the 3d view and another in the 2d. 2D has correct behavior,3d does not. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%also appears to be significant lag with these brush strokes.%%%

%%%also appears to be significant lag with these brush strokes.%%%

%%%Confirmed. The code that handles masking is quite different for the two systems, I'll take a look here.%%%

%%%Confirmed. The code that handles masking is quite different for the two systems, I'll take a look here.%%%
Author

%%%great,please ignore the comment there about lag.Having the brush spacing set to 1% will cause lag,even in high end paint software like PS,setting it to something like 4% fixes that issue.Very dependent on the radius size too.

%%%

%%%great,please ignore the comment there about lag.Having the brush spacing set to 1% will cause lag,even in high end paint software like PS,setting it to something like 4% fixes that issue.Very dependent on the radius size too. %%%

%%%Fixed r56986, thanks for reporting!%%%

%%%Fixed r56986, thanks for reporting!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35426
No description provided.