Fix #35426, masking works wrong in projection painting. When we don't use tiling, we need to sample the mask texture when determining the pixel masking.